--- a/vite-project/css/header.css
+++ b/vite-project/css/header.css
@@ -1,16 +1,46 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500&display=swap");
+.hidden {
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  -webkit-transform: translateY(-200px);
+          transform: translateY(-200px);
+}
+
 .header {
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  z-index: 99;
+  position: fixed;
+  top: 0;
+  width: 100%;
   max-height: 150px;
+  border-bottom: 2px solid white;
   height: 150px;
-  max-width: 100vw;
   background-color: black;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
 }
-.header .logo {
-  margin-left: 150px;
-  height: 100%;
+.header .logo-title {
+  padding-left: 50px;
+  width: 20%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.header .logo-title .logo {
+  cursor: pointer;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
   display: grid;
   -ms-flex-line-pack: center;
       align-content: center;
@@ -18,6 +48,161 @@
       -ms-flex-pack: center;
           justify-content: center;
 }
-.header .logo img {
+.header .logo-title .logo img {
+  border-radius: 10px;
   max-height: 50px;
+}
+.header .logo-title .title {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  cursor: pointer;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  margin-left: 20px;
+  display: grid;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 800;
+  font-size: 37px;
+  line-height: 56px;
+  letter-spacing: 2px;
+  /* identical to box height, or 151% */
+  color: #FFFFFF;
+}
+.header .pages {
+  width: 80%;
+  list-style-type: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.header .pages .page {
+  margin: 0 20px;
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 30px;
+  /* identical to box height, or 150% */
+}
+.header .pages .page .a {
+  color: #707070;
+  text-decoration: none;
+}
+.header .pages .page .a:hover {
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  color: #3C82F4;
+}
+.header .languageDropdown {
+  padding-right: 50px;
+  width: 20%;
+  color: #FFFFFF;
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 1rem;
+  line-height: 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  list-style-type: none;
+  text-align: center;
+}
+.header .languageDropdown .currentLanguage {
+  display: grid;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  z-index: 1;
+  cursor: pointer;
+  color: #FFFFFF;
+  width: 40px;
+  height: 40px;
+  border: none;
+  position: relative;
+  border-radius: 6px 6px 6px 6px;
+  -webkit-transition: background-color 0.4s;
+  transition: background-color 0.4s;
+}
+.header .languageDropdown .currentLanguage:hover {
+  z-index: 4;
+  border-radius: 6px 6px 0px 0px;
+  outline: 2px solid white;
+  background-color: #306EF7 !important;
+}
+.header .languageDropdown .currentLanguage:hover + .langWrapper {
+  display: block;
+}
+.header .languageDropdown .langWrapper {
+  z-index: 3;
+  display: none;
+  cursor: pointer;
+  background-color: #306EF7;
+  list-style-type: none;
+  position: absolute;
+  border-radius: 0px 0px 6px 6px;
+  top: 95px;
+}
+.header .languageDropdown .langWrapper .dropdownContent {
+  z-index: 3;
+  display: grid;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  color: white;
+  height: 40px;
+  width: 40px;
+  z-index: 1;
+  -webkit-transition: background-color 1s;
+  transition: background-color 1s;
+}
+.header .languageDropdown .langWrapper .dropdownContent:hover {
+  outline: 2px solid white;
+  background-color: #306EF7;
+}
+.header .languageDropdown .langWrapper .dropdownContent:last-child {
+  border-radius: 0px 0px 6px 6px;
+}
+.header .languageDropdown .langWrapper:hover {
+  display: block;
+}
+.header .languageDropdown .langWrapper:hover ~ .currentLanguage {
+  background-color: #306EF7;
 }
