--- a/vite-project/scss/blog.scss
+++ b/vite-project/scss/blog.scss
@@ -1,1 +1,251 @@
 @import './variables';
+
+
+.mainBlog {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+
+    .titleBlog {
+        margin-top: 100px;
+        font-family: 'Poppins';
+        font-style: normal;
+        font-weight: 600;
+        font-size: 75px;
+        line-height: 112px;
+        /* identical to box height, or 149% */
+
+
+        color: #FFFFFF;
+    }
+
+    .post {
+        transform: translateX(-200px);
+        opacity: 0;
+        transition: .8s;
+    }
+
+    .post:last-child {
+        transform: translateX(200px);
+        opacity: 0;
+    }
+
+    .shownPost {
+        transition: .8s;
+        transform: translateX(0px) !important;
+        opacity: 1 !important;
+    }
+
+    .post {
+        margin-top: 20px;
+        margin-bottom: 100px;
+        background-color: white;
+        max-width: 800px;
+        width: 800px;
+        height: 380px;
+        border: 5px solid #326CF9;
+        border-radius: 20px;
+
+        .author {
+            display: flex;
+            align-items: center;
+            height: 80px;
+            width: 100%;
+            border-bottom: 1px dashed grey;
+
+            .imgWrapper {
+
+                margin-left: 20px;
+                width: 60px;
+                height: 60px;
+                max-width: 60px;
+
+                img {
+                    border-radius: 50%;
+                    object-fit: fill;
+                    max-width: 100%;
+                    max-height: 100%;
+                }
+            }
+
+            .nameNdate {
+                margin-left: 20px;
+
+                .name {
+                    font-family: 'Poppins';
+                    font-style: normal;
+                    font-weight: 400;
+                    font-size: 24px;
+                    line-height: 36px;
+                    /* identical to box height, or 150% */
+
+
+                    color: black;
+                }
+
+                .date {
+                    font-family: 'Poppins';
+                    font-style: normal;
+                    font-weight: 400;
+                    font-size: 14px;
+                    // line-height: 36px;
+                    /* identical to box height, or 150% */
+
+
+                    color: #B4B1B1;
+                }
+            }
+        }
+
+        .titleImgWrapper {
+            display: flex;
+            width: 100%;
+            height: calc(100% - 80px);
+
+            img {
+                height: 99.5%;
+                width: 50%;
+                border-bottom-left-radius: 20px;
+                object-fit: cover;
+            }
+
+            .titleReadMore {
+                height: calc(100% - 10px);
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between;
+                align-items: center;
+
+                .title {
+                    padding: 10px 20px;
+                    // display: inline;
+                    // overflow: hidden;
+                    font-family: 'Poppins';
+                    font-style: normal;
+                    font-weight: 600;
+                    font-size: 24px;
+                    /* identical to box height, or 150% */
+
+
+                    color: black;
+                }
+
+                .readmore {
+                    // margin: auto;
+
+                    user-select: none;
+                    cursor: pointer;
+                    display: grid;
+                    align-content: center;
+                    justify-content: center;
+                    background: #326CF9;
+                    color: white;
+                    font-family: 'Poppins';
+                    font-style: normal;
+                    font-weight: 600;
+                    border: 2px solid white;
+
+                    width: 140px;
+                    height: 50px;
+                    border-radius: 10px;
+
+                    &:hover {
+                        transition: .3s;
+                        border: 2px solid #326CF9;
+                        color: #326CF9;
+                        background-color: white;
+                    }
+                }
+            }
+        }
+
+        .hide {
+            display: none;
+        }
+
+        .text {
+            display: none;
+        }
+    }
+
+    .opened {
+        transition: all 1s;
+        height: fit-content;
+
+        .titleImgWrapper {
+            position: relative;
+
+            img {
+                width: 100%;
+                height: 300px;
+                object-fit: cover;
+                border-bottom-left-radius: 0px;
+                // filter: blur(20px);
+            }
+
+            .titleReadMore {
+                .readmore {
+                    display: none;
+                }
+
+                .title {
+                    background-color: #326cf973;
+
+                    text-align: center;
+                    color: white;
+                    // -webkit-text-stroke: 1px #326CF9;
+                    position: absolute;
+                    top: 50%;
+                    left: 50%;
+                    -webkit-transform: translateX(-50%) translateY(-50%);
+                    transform: translateX(-50%) translateY(-50%);
+                    width: 70%;
+                }
+            }
+        }
+
+        .text {
+            font-family: 'Poppins';
+            font-style: normal;
+            font-weight: 400;
+            font-size: 28px;
+            line-height: 42px;
+            /* or 150% */
+
+
+            color: black;
+            margin-top: 20px;
+            padding: 20px;
+            padding-left: 50px;
+            display: block;
+        }
+
+        .hide {
+            margin: 0 auto;
+            margin-bottom: 20px;
+            user-select: none;
+            cursor: pointer;
+            display: grid;
+            align-content: center;
+            justify-content: center;
+            background: #326CF9;
+            color: white;
+            font-family: 'Poppins';
+            font-style: normal;
+            font-weight: 600;
+            border: 2px solid white;
+
+            width: 140px;
+            height: 50px;
+            border-radius: 10px;
+
+            &:hover {
+                transition: .3s;
+                border: 2px solid #326CF9;
+                color: #326CF9;
+                background-color: white;
+            }
+        }
+
+    }
+}
