--- a/vite-project/scss/globals.scss
+++ b/vite-project/scss/globals.scss
@@ -8,7 +8,7 @@
 
 .main-wrapper {
     background-color: $mainBG;
-    height: 100vh;
-    width: 100vw;
-    max-width: 100vw;
+    // height: 100vh;
+    // width: 100vw;
+    // max-width: 100vw;
 }
