--- a/vite-project/scss/header.scss
+++ b/vite-project/scss/header.scss
@@ -1,21 +1,185 @@
 @import './variables';
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500&display=swap');
 
+.hidden {
+    transition: .5s;
+    transform: translateY(-200px);
+}
+
 .header {
+    transition: .5s;
+    z-index: 99;
+    position: fixed;
+    top: 0;
+    width: 100%;
     max-height: 150px;
+    border-bottom: 2px solid white;
     height: 150px;
-    max-width: 100vw;
+    // width: 100vw;
+    // max-width: 100vw;
     background-color: $mainBG;
     display: flex;
-    .logo {
-        margin-left: 150px;
-        height: 100%;
-        
-        display: grid;
-        align-content: center;
+    justify-content: space-around;
+
+    .logo-title {
+        padding-left: 50px;
+        width: 20%;
+        display: flex;
+        align-items: center;
         justify-content: center;
-        img {
-            max-height: 50px;
+
+        .logo {
+            cursor: pointer;
+            // margin-left: 150px;
+            height: fit-content;
+
+            display: grid;
+            align-content: center;
+            justify-content: center;
+
+            img {
+                border-radius: 10px;
+                max-height: 50px;
+            }
+        }
+
+        .title {
+            user-select: none;
+            cursor: pointer;
+            height: fit-content;
+            margin-left: 20px;
+            display: grid;
+            align-content: center;
+            justify-content: center;
+            font-family: 'Poppins';
+            font-style: normal;
+            font-weight: 800;
+            font-size: 37px;
+            line-height: 56px;
+            letter-spacing: 2px;
+            /* identical to box height, or 151% */
+
+
+            color: #FFFFFF;
+        }
+    }
+
+    .pages {
+        width: 80%;
+        list-style-type: none;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        .page {
+            margin: 0 20px;
+            font-family: 'Poppins';
+            font-style: normal;
+            font-weight: 500;
+            font-size: 20px;
+            line-height: 30px;
+            /* identical to box height, or 150% */
+
+            .a {
+                color: #707070;
+                text-decoration: none;
+            }
+
+            .a:hover {
+                transition: .3s;
+                color: #3C82F4;
+            }
+        }
+    }
+
+    .languageDropdown {
+        padding-right: 50px;
+        width: 20%;
+        color: #FFFFFF;
+
+        font-family: 'Poppins';
+        font-style: normal;
+        font-weight: 500;
+        font-size: 1rem;
+        line-height: 30px;
+
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+        justify-content: center;
+
+        list-style-type: none;
+        text-align: center;
+
+        .currentLanguage {
+            display: grid;
+            align-content: center;
+            justify-content: center;
+            user-select: none;
+            z-index: 1;
+            cursor: pointer;
+            color: #FFFFFF;
+            width: 40px;
+            height: 40px;
+            border: none;
+            position: relative;
+            border-radius: 6px 6px 6px 6px;
+            transition: background-color .4s;
+        }
+        
+        .currentLanguage:hover {
+            z-index: 4;
+            border-radius: 6px 6px 0px 0px;
+            outline: 2px solid white;
+            background-color: #306EF7 !important;
+        }
+
+        .currentLanguage:hover+.langWrapper {
+            display: block;
+        }
+
+        .langWrapper {
+
+            z-index: 3;
+            display: none;
+            cursor: pointer;
+            background-color: #306EF7;
+            list-style-type: none;
+            position: absolute;
+            border-radius: 0px 0px 6px 6px;
+            top: 95px;
+
+            .dropdownContent {
+                z-index: 3;
+                display: grid;
+                align-content: center;
+                justify-content: center;
+                user-select: none;
+                color: white;
+            
+                height: 40px;
+                // top: 90px;
+                width: 40px;
+                z-index: 1;
+                transition: background-color 1s;
+            }
+
+            .dropdownContent:hover {
+                outline: 2px solid white;
+                background-color: #306EF7;
+            }
+
+            .dropdownContent:last-child {
+                border-radius: 0px 0px 6px 6px;
+            }
+        }
+
+        .langWrapper:hover {
+            display: block;
+        }
+
+        .langWrapper:hover~.currentLanguage {
+            background-color: #306EF7;
         }
     }
 }
