--- a/vite-project/scss/story.scss
+++ b/vite-project/scss/story.scss
@@ -1,1 +1,144 @@
 @import './variables';
+
+
+.mainStory {
+    .intro {
+        background: #f45b69;
+        padding: 100px 0;
+    }
+
+    .container {
+        width: 90%;
+        max-width: 1200px;
+        margin: 0 auto;
+        text-align: center;
+    }
+
+    h1 {
+        font-size: 2.5rem;
+    }
+
+
+    .textTimeLine {
+        opacity: 0;
+        transition: 1s;
+    }
+
+    .shownTime {
+        transition: 1s;
+        opacity: 1;
+    }
+
+    .timeline {
+        margin-bottom: 150px;
+    }
+
+    .timeline ul li {
+        list-style-type: none;
+        position: relative;
+        width: 6px;
+        margin: 0 auto;
+        padding-top: 100px;
+        background: #fff;
+    }
+
+    .timeline ul li::after {
+        content: "";
+        position: absolute;
+        left: 50%;
+        bottom: 0;
+        transform: translateX(-50%);
+        width: 30px;
+        height: 30px;
+        border-radius: 50%;
+        background: inherit;
+        z-index: 1;
+    }
+
+    .timeline ul li div {
+        position: relative;
+        bottom: 0;
+        width: 400px;
+        padding: 15px;
+        background: #3C82F4;
+        border: 3px solid white;
+
+        font-family: 'Poppins';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 28px;
+        line-height: 42px;
+        color: white;
+    }
+
+    .timeline ul li div::before {
+        content: "";
+        position: absolute;
+        bottom: 7px;
+        width: 0;
+        height: 0;
+        border-style: solid;
+    }
+
+    .timeline ul li:nth-child(odd) div {
+        left: 45px;
+        border-radius: 20px 20px 20px 8px;
+    }
+
+    .timeline ul li:nth-child(odd) div::before {
+        left: -17px;
+        border-width: 8px 16px 8px 0;
+        border-color: transparent white transparent transparent;
+    }
+
+    .timeline ul li:nth-child(even) div {
+        left: -470px;
+        border-radius: 20px 20px 8px 20px;
+    }
+
+    .timeline ul li:nth-child(even) div::before {
+        right: -17px;
+        border-width: 8px 0 8px 16px;
+        border-color: transparent transparent transparent white;
+    }
+
+    time {
+        display: block;
+        font-size: 1.2rem;
+        font-weight: bold;
+        margin-bottom: 8px;
+    }
+
+
+    /* EFFECTS
+      –––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+    // .timeline ul li::after {
+    //     transition: background 0.5s ease-in-out;
+    // }
+
+    // .timeline ul li.in-view::after {
+    //     background: #f45b69;
+    // }
+
+    // .timeline ul li div {
+    //     visibility: hidden;
+    //     opacity: 0;
+    //     transition: all 0.5s ease-in-out;
+    // }
+
+    // .timeline ul li:nth-child(odd) div {
+    //     transform: translate3d(200px, 0, 0);
+    // }
+
+    // .timeline ul li:nth-child(even) div {
+    //     transform: translate3d(-200px, 0, 0);
+    // }
+
+    // .timeline ul li.in-view div {
+    //     transform: none;
+    //     visibility: visible;
+    //     opacity: 1;
+    // }
+
+}
