--- a/vite-project/css/main.css
+++ b/vite-project/css/main.css
@@ -630,8 +630,7 @@
   font-family: "Poppins";
   font-style: normal;
   font-weight: 600;
-  font-size: 80px;
-  line-height: 120px;
+  font-size: 64px;
   /* identical to box height, or 150% */
   color: #919191;
   margin-top: 24px;
@@ -640,7 +639,7 @@
   font-family: "Poppins";
   font-style: normal;
   font-weight: 600;
-  font-size: 80px;
+  font-size: 64px;
   line-height: 120px;
   /* identical to box height, or 150% */
   color: #FFFFFF;
@@ -1060,4 +1059,66 @@
   /* identical to box height */
   text-align: center;
   color: #707070;
+}
+
+@media only screen and (max-width: 600px) {
+  .title1,
+.title2 {
+    font-size: 62px !important;
+    line-height: 80px !important;
+  }
+  .buttons {
+    -webkit-box-orient: vertical !important;
+    -webkit-box-direction: normal !important;
+        -ms-flex-direction: column !important;
+            flex-direction: column !important;
+  }
+  .buttons .button2 {
+    margin-left: 0px !important;
+    margin-top: 30px;
+  }
+  .manySubs .num {
+    font-size: 17px !important;
+    line-height: 26px !important;
+  }
+  .manySubs .text {
+    font-size: 17px !important;
+    line-height: 26px !important;
+  }
+  .reasons {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .firstStepDetails {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .descr {
+    width: 100% !important;
+    padding: 0px !important;
+  }
+  .descr .buttons {
+    -webkit-box-orient: vertical !important;
+    -webkit-box-direction: normal !important;
+        -ms-flex-direction: column !important;
+            flex-direction: column !important;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .descr .buttons .sb {
+    margin-left: 0px !important;
+    margin-top: 30px;
+  }
+  .photo {
+    display: none !important;
+  }
+  .secondStep .title {
+    font-size: 75px;
+    line-height: 112px;
+  }
 }
